# xpunwrap

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  readthedocs.yml  setup.cfg
.github/workflows/: check.yml  deploy_pypi.yml
docs/: api.rst  conf.py  examples.rst  index.md  index.rst  introduction.md  introduction.rst  usage.rst
docs/algorithms/: index.rst  ls_poisson.rst  ls_poisson_periodic_grad.rst  ls_poisson_pg.rst  ls_weighted.rst  tvl1.rst
docs/extensions/: fancy_include.py
examples/: compare_cpu_gpu.py  gpu_field_retr_phase_unwrapping.py  phase_unwrap_algos.py  poisson_ls_walkthrough.py  processing_pipeline_gpu.py  requirements.txt  unwrapping_simulation.py  unwrapping_simulation_comparison.py  unwrapping_simulation_itoh.py  unwrapping_simulation_poisson.py  using_backends_and_fft-engines.py  walkthrough-ls_poisson_pg.py
tests/: conftest.py  helper_methods.py  requirements.txt  test_fft_engines.py  test_ls_poisson.py  test_ls_poisson_periodic_grad.py  test_ls_weighted.py  test_tvl1.py
tests/benchmarking/: benchmark_pipeline_cupy.json  benchmark_results.json  plot_benchmark_pipeline_cupy.py  plot_benchmarks_algorithms.py  test_benchmark_algorithms.py  test_benchmark_pipeline_cupy.py
unwrap_phase_gpu/: __init__.py  _dtype_utils.py  _ndarray_backend.py
unwrap_phase_gpu/algorithms/: __init__.py  ls_poisson.py  ls_poisson_periodic_grad.py  ls_weighted.py  skimage_unwrap.py  tvl1.py
xpunwrap/: __init__.py  _dtype_utils.py  _ndarray_backend.py
xpunwrap/algorithms/: __init__.py  _ls_common.py  _plane_utils.py  ls_poisson.py  ls_poisson_pg.py  ls_weighted.py  skimage_unwrap.py  tvl1.py
xpunwrap/fourier/: __init__.py  base.py  fft_cupy.py  fft_numpy.py  fft_pyfftw.py
