[project]
name = "xpunwrap"
version = "0.1.0"
description = "Phase unwrapping algorithms which are CPU and GPU agnostic"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
]

[tool.setuptools]
packages = ["xpunwrap"]
include-package-data = true

[project.optional-dependencies]
# cupy has several installation options, depending on your CUDA Toolkit version
cupy-cuda12x = ["cupy-cuda12x"]
cupy-cuda13x = ["cupy-cuda13x"]
scikit-image = ["scikit-image>=0.20.0"]

[dependency-groups]
tests = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "qpretrieve[FFTW]>=0.6.0",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]
examples = [
    "matplotlib>=3.10.8",
    "qpretrieve>=0.6.0",
    "zarr>=3.1.0",
    "scikit-image>=0.24.0",
]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    { include-group = "examples" },
    "flake8>=7.3.0",
]
